Switched to Java 11. (#8)
* Switched to Java 11.